--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "contributors-generate": "all-contributors generate"
   },
   "dependencies": {
+    "clockify-api": "^1.1.0",
+    "express": "^4.17.1",
+    "hummus-recipe": "^2.0.0",
+    "moment": "^2.29.1",
     "tsns": "0.0.18",
-    "typescript": "3.6.4"
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/chai": "4.1.4",
