--- a/package.json
+++ b/package.json
@@ -27,9 +27,16 @@
   },
   "dependencies": {
     "clockify-api": "^1.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "filecompare": "^1.0.4",
     "hummus-recipe": "^2.0.0",
     "moment": "^2.29.1",
+    "pdf-merger-js": "^3.0.5",
+    "pdf-parse": "^1.1.1",
+    "tmp": "^0.2.1",
+    "tohhmmss": "^1.0.1",
+    "ts-node": "^9.1.1",
     "tsns": "0.0.18",
     "typescript": "^4.1.3"
   },
