--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "filecompare": "^1.0.4",
     "hummus-recipe": "^2.0.0",
     "moment": "^2.29.1",
+    "mustache": "^4.1.0",
     "pdf-merger-js": "^3.0.5",
     "pdf-parse": "^1.1.1",
+    "puppeteer": "^5.5.0",
     "tmp": "^0.2.1",
     "tohhmmss": "^1.0.1",
     "ts-node": "^9.1.1",
